TWITTER-HASHTAG-METRIC: Implement Twitter Hashtag Tracking Action

--- a/tracking-action-twitter/src/main/resources/content/Language.properties
+++ b/tracking-action-twitter/src/main/resources/content/Language.properties
@@ -1,2 +1,3 @@
-model.resource.com.liferay.content.targeting.tracking.action.TwitterTrackingAction=Twitter Tracking Action Name
-model.resource.com.liferay.content.targeting.tracking.action.TwitterTrackingAction.description=Twitter Tracking Action Description
+model.resource.com.liferay.content.targeting.tracking.action.TwitterTrackingAction=Twitter Tag
+model.resource.com.liferay.content.targeting.tracking.action.TwitterTrackingAction.description=Tracks Twitter Tags Views
+view-tag=View Tag
