TWITTER-HASHTAG-REPORT: Implement Twitter Hashtag Report

--- a/report-twitter/src/main/resources/content/Language.properties
+++ b/report-twitter/src/main/resources/content/Language.properties
@@ -1,6 +1,2 @@
-model.resource.com.liferay.content.targeting.report.TwitterReport.description=Twitter Report Description
-model.resource.com.liferay.content.targeting.report.TwitterReport=Twitter Report Name
-setting1=Setting 1
-setting2=Setting 2
-these-are-custom-settings-for-users-configuring-your-report=These are custom settings for users configuring your report.
-your-data-should-be-displayed-here=Your data should be displayed here.
+model.resource.com.liferay.content.targeting.report.TwitterReport.description=Shows information about tags being used as Twitter hashtags.
+model.resource.com.liferay.content.targeting.report.TwitterReport=Twitter Hashtag Report
